[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ptlasso"
version = "0.1.0"
description = "Pretrained Lasso: a two-step training process for sparse linear models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scikit-learn",
    "adelie",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ptlasso"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
