[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ptlasso"
version = "0.3.8"
description = "Pretrained Lasso: a two-step procedure for sparse linear models with grouped samples"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.13"
authors = [
    { name = "Erin Craig" },
    { name = "Thomas Le Menestrel" },
    { name = "Robert Tibshirani" },
]
keywords = [
    "lasso",
    "regularization",
    "sparse",
    "grouped data",
    "pretraining",
    "statistics",
    "machine learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.22",
    "scikit-learn>=1.1",
    "adelie>=1.0",
    "matplotlib>=3.5",
    "tqdm>=4.0",
]

[project.urls]
Homepage = "https://github.com/thomaslemenestrel/ptlasso"
Repository = "https://github.com/thomaslemenestrel/ptlasso"
"Bug Tracker" = "https://github.com/thomaslemenestrel/ptlasso/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ptlasso"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
